[package]
name = "game-engine"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { version = "0.14.0", optional = true}
glutin = { version = "0.28.0", optional = true}
winit = "0.26.0"